jboard.less
@btn-bg: #10C8CD;
@font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
@spacing: 2em;

.boxShadow(@radius){
  -webkit-border-radius: @radius !important;
  -moz-border-radius: @radius !important;
  -ms-border-radius: @radius !important;
  -o-border-radius: @radius !important;
  border-radius: @radius !important;
}

.background(@color){
  background: @color;
}

.margins(@top, @bottom, @left, @right){
  margin-top: @top;
  margin-bottom: @bottom;
  margin-left: @left;
  margin-right: @right;
}

.fontWeight(@weight){
  font-weight: @weight;
}

body {
  font-family: @font-family;
  padding-top: 20px;
  background: #f2f3f6;
}

textarea {
  resize: none;
}

a {
  color: #333;

  &:hover {
    color: #555;
    text-decoration: none;
  }
}

ul {
  padding-left: 0;
}

li {
  list-style-type: none;
}

label {
  padding: 0 10px 0;
}

.jumbotron {
  background: url('/noOfficeHero.jpg');
  background-size: 100% 100%;
  color: #eee;
  text-shadow: 1px 2px #333;
  height: 33em;
  padding-top: 6em;
  background-repeat: no-repeat;
}

.site-link {
  color: #337ab7;

  &:hover {
    color: #23527c;
    text-decoration: underline;
  }
}

.alert {
  padding: 10px;
  margin: 5px 0;
}

.alert-info {
  color: #333;
}

.status-notification {
  display: none;
}

.create-posting-form {
  margin: 35px 0;
  label {
    padding: 0;
    margin-bottom: 2px;
  }
  .form-control {
    padding: 6px 8px;
  }
}

.list-group-item {
  border: none;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  padding: 10px 0px;

  &:first-child, &:last-child {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }
}

.panel-body {
  h5 {
    text-decoration: underline;
  }

  mark {
    font-style: italic;
  }
}

/* Custom page header */
.header {
  padding: 0 15px 20px;
  height: 3em;

  /* Make the masthead heading the same height as the navigation */
  h3{
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 20px 15px 0;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Supporting marketing content */
.marketing {
  padding-right: 15px;
  padding-left: 15px;

    p + h4 {
    margin-top: 28px;
  }
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;

  .btn {
    padding: 14px 24px;
    font-size: 21px;
    text-shadow: none;
  }
}

.footer {
  text-align: center;
  font-family: @font-family;
  font-weight: normal;
  margin: 3em auto 0;
  text-align: center;
  padding-bottom: 1em;
  background: #333;
  color: #fff;

  .footer-logo {
    text-align: center;
  }

  .footer-links {
    margin-bottom: @spacing;

    ul li {
      padding: 0 .3em;
    }
  }

  ul {
    margin-bottom: @spacing * 1.5;
    padding: 0;
  }

  li {
    display: inline-block;
    line-height: 1.5em;
    list-style: none;
    text-align: center;
    img {
      background: #222;
      width: 2.5em;
      &:hover {
        cursor: pointer;
      }
    }
  }

  li a {
    text-decoration: none;
    color: #fff;
    &:hover {
      color: darken(#fff, 5%);
    }
  }
}


/* Job Group styling for landing page */

.jobGroup{

  a{
      border-bottom: 1px solid #e7e7e7;
  		color: #888;
  		display: block;
  		float: left;
  		padding: 15px;
  		position: relative;
  		overflow: hidden;
  		width: 100%;
      background: #fff;
  	}

  	a:nth-child(2n) {
  			background: #f8f8f8;
  	}

  	a:hover {
  	 	background: #f2f2f2;
  	}

    .titleCompany{
      float: left;
    }

    h5{
      .margins(0, 0, 0, 0);
      .fontWeight(bold);
    }

    .details{
      float: right;

      span{
        display: inline-block;
        padding: 16px 0 0;
        width: 10rem;
      }

      .dateCreated{
        width: 18rem;
      }

    }

}

/* Job Posting bread crumb */
.postBreadCrumb{

  .margins(30px, 30px, 0, 0);

  li{
  margin-bottom: 3px;
  border: 1px solid #e1e1e1;
  padding: 5px 20px;
  .boxShadow(3px);
    i{
      margin-right: 3px;
    }
  }
}

h2.title{
  .margins(20px, 0px, 0px, 0px);
}

.postingWrapper{
 .background(#fff);
 h3{
   .margins(30px, 10px, 0, 0);
   .fontWeight(bold);
 }
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 970px;
  }
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-right: 0;
    padding-left: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

